fix: z-index for email type preventing onClick event from being called

--- a/app/bundles/EmailBundle/Assets/css/email.css
+++ b/app/bundles/EmailBundle/Assets/css/email.css
@@ -31,3 +31,6 @@
 .queue_show{
     display: block;
 }
+.email-type{
+    z-index: 1!important;
+}
